--- a/misc/chattr.1.in
+++ b/misc/chattr.1.in
@@ -114,9 +114,8 @@ The 'e' attribute indicates that the file is using extents for mapping
 the blocks on disk.  It may not be removed using
 .BR chattr (1).
 .PP
-The 'E' attribute is used by the experimental encryption patches to
-indicate that the file has been encrypted.  It may not be
-set or reset using
+A file, directory, or symlink with the 'E' attribute set is encrypted by the
+filesystem.  This attribute may not be set or reset using
 .BR chattr (1),
 although it can be displayed by
 .BR lsattr (1).
