--- a/scrub/e2scrub.in
+++ b/scrub/e2scrub.in
@@ -201,7 +201,7 @@ mark_corrupt() {
 
 setup() {
 	# Try to remove snapshot for 30s, bail out if we can't remove it.
-	lveremove_deadline="$(( $(date "+%s") + 30))"
+	lvremove_deadline="$(( $(date "+%s") + 30))"
 	${DBG} lvremove -f "${LVM2_VG_NAME}/${snap}" 2>/dev/null
 	while [ -e "${snap_dev}" ] && [ "$?" -eq "5" ] &&
 	      [ "$(date "+%s")" -lt "${lvremove_deadline}" ]; do
