e2scrub, e2scrub_all: don't sleep unnecessarily in exitcode
The two second sleep is only needed in e2scrub, and when there is a
failure, so that systemd has a chance to gather the log output before
e2scrub exits.  It's not needed if the script is exiting successfully,
and it's never needed for e2scrub_all ever.

Addresses-Debian-Bug: #948193
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/scrub/e2scrub.in
+++ b/scrub/e2scrub.in
@@ -66,7 +66,7 @@ exitcode() {
 	# for capturing all the log messages if the scrub fails, because the
 	# fail service uses the service name to gather log messages for the
 	# error report.
-	if [ -n "${SERVICE_MODE}" ]; then
+	if [ -n "${SERVICE_MODE}" -a "${ret}" -ne 0 ]; then
 		test "${ret}" -ne 0 && ret=1
 		sleep 2
 	fi
