--- a/scrub/e2scrub_all.in
+++ b/scrub/e2scrub_all.in
@@ -56,14 +56,8 @@ exitcode() {
 	# section 22.2) and hope the admin will scan the log for what
 	# actually happened.
 
-	# We have to sleep 2 seconds here because journald uses the pid to
-	# connect our log messages to the systemd service.  This is critical
-	# for capturing all the log messages if the scrub fails, because the
-	# fail service uses the service name to gather log messages for the
-	# error report.
-	if [ -n "${SERVICE_MODE}" ]; then
+	if [ -n "${SERVICE_MODE}" -a "${ret}" -ne 0 ]; then
 		test "${ret}" -ne 0 && ret=1
-		sleep 2
 	fi
 
 	exit "${ret}"
