Only build resize2fs.static when running "make all-static"
Fixes: 93df80d2409d ("Teach makefiles... the target all-static")
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/resize/Makefile.in
+++ b/resize/Makefile.in
@@ -43,7 +43,7 @@ DEPSTATIC_LIBS= $(STATIC_LIBE2P) $(STATIC_LIBEXT2FS) $(DEPSTATIC_LIBCOM_ERR)
 
 all:: $(PROGS) $(TEST_PROGS) $(MANPAGES) 
 
-all:: resize2fs.static
+all-static:: resize2fs.static
 
 resize2fs: $(RESIZE_OBJS) $(DEPLIBS)
 	$(E) "	LD $@"
