--- a/lib/e2p/Makefile.in
+++ b/lib/e2p/Makefile.in
@@ -218,3 +218,5 @@ fsetproject.o: $(srcdir)/fsetproject.c $(top_builddir)/lib/config.h \
 encoding.o: $(srcdir)/encoding.c $(top_builddir)/lib/config.h \
  $(top_builddir)/lib/dirpaths.h $(srcdir)/e2p.h \
  $(top_srcdir)/lib/ext2fs/ext2_fs.h $(top_builddir)/lib/ext2fs/ext2_types.h
+errcode.o: $(srcdir)/errcode.c $(top_builddir)/lib/config.h \
+ $(top_builddir)/lib/dirpaths.h
